# agent-examples

./: .gitignore  cockroachdb.yaml  pyproject.toml
a2a/cockroachdb_operator_agent/: .env.openai  .env.vllm  Dockerfile  README.md  pyproject.toml  test_startup.exp
a2a/cockroachdb_operator_agent/src/cockroachdb_operator_agent/: __init__.py  agent.py  configuration.py  graph.py  trajectory.py
a2a/cockroachdb_operator_agent/tests/: test_agent_contract.py
a2a/weather_service/src/weather_service/: agent.py  graph.py
mcp/cockroachdb_tool/: .env.template  BENCHMARK_SCENARIOS.md  Dockerfile  README.md  __init__.py  cockroachdb_tool.py  operations.py  pyproject.toml  schemas.py  test_startup.exp
mcp/cockroachdb_tool/providers/: __init__.py  base.py  kubernetes.py  sql.py
mcp/cockroachdb_tool/tests/: __init__.py  test_cockroachdb_tool.py
