[project]
name = "cockroachdb-operator-agent"
version = "0.1.0"
description = "A2A CockroachDB operator agent using approval-gated MCP tools"
authors = [
    { name = "Kagenti Contributors" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "openinference-instrumentation-langchain>=0.1.66",
    "pydantic-settings>=2.14.1",
    "langchain-mcp-adapters>=0.2.2",
    "opentelemetry-exporter-otlp>=1.42.1",
    "urllib3>=2.7.0",
    "python-multipart>=0.0.32",
    "langsmith>=0.8.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
server = "cockroachdb_operator_agent.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

