[project]
name = "cockroachdb-tool"
version = "0.1.0"
description = "CockroachDB operator MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "psycopg[binary]>=3.3.2",
    "kubernetes>=34.1.0",
    "uvicorn>=0.38.0",
    "authlib>=1.7.2",
    "urllib3>=2.7.0",
    "python-multipart>=0.0.32",
    "cryptography>=48.0.1,<49",
    "pyjwt>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
